fixed home page spacing

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -55,14 +55,14 @@ body {
 
 .project {
   float: left;
-  width: 33.3%;
+  width: 32%;
   height: 250px;
   font-size: 10px;
   line-height: 1.4;
   text-align: center;
   background-color: #FFFFFF;
   /*background-color: #b0b0b0;*/
-  border: 5px solid transparent;
+  margin: 5px;
   overflow: hidden;
 }
 
